package entregas.sergioMayen.ExamenFinal.DeArrayList_TO_Arboles;

public class Alimento {
    String nombre;

    public Alimento(String nombre) {
        this.nombre = nombre;
    }

    @Override
    public String toString() {
        return nombre;
    }
}
